# fine_tuning_and_parsing_agent

./: .gitignore  README.md  agent_examples.md  history.txt  history_finetuning.html  history_finetuning.ipynb  history_sft_dataset.json  model_comparison.csv  orpo_friendly_dataset.json  pyproject.toml  sxodim_agent.html  sxodim_agent.ipynb  sxodim_data.json  task.md
