[project]
name = "qa_bot_agent"
version = "0.1.0"
description = "История Казахстана QA-бот с fine-tuning"
authors = [
    {name = "Alikhan Shorin",email = "alikhan.shorin@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    # Jupyter и notebook
    "jupyter>=1.1.1,<2.0.0",
    "ipykernel>=7.1.0,<8.0.0",

    # PyTorch (для M-series Mac)
    "torch>=2.0.0",
    "torchvision>=0.15.0",

    # LLM Fine-tuning (без unsloth для macOS)
    "transformers>=4.40.0",
    "accelerate>=0.27.0",
    "datasets>=2.18.0",
    "peft>=0.9.0",
    "trl>=0.8.0",

    # OCR и обработка PDF
    "docling>=1.0.0",
    "docling-surya>=0.1.0",
    "surya-ocr>=0.17.0",
    "Pillow>=10.0.0",

    # OpenAI API
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",

    # Метрики оценки
    "evaluate>=0.4.1",
    "bert-score>=0.3.13",
    "sacrebleu>=2.4.0",

    # Дополнительные зависимости
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",

    # Agent dependencies
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "crawl4ai>=0.4.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
